Cleaned up and Generated Tests for Utils + CoreIcon Class